@@ -1,26 +1,27 @@
 service: compute
 
-# do not apply rate limits to these projects
+# Do not apply rate limits to these projects.
 whitelist:
-  - project_id: 1233456789abcdef
+  - 1233456789abcdef
 
-# these projects get an immediate rate limit response
+# These projects get an immediate rate limit response.
 blacklist:
-  - project_id: abcdef1233456789
+  - abcdef1233456789
 
 rates:
-  # global rate limits counted across all projects
+  # Global rate limits counted across all projects.
   global:
     servers:
-      - type: create
+      - action: create
         limit: 50r/m
-      - type: read
+
+      - action: read
         limit: 1000r/m
 
-  # default local rate limits applied to each project
+  # Default local rate limits applied to each project.
   defaults:
     servers:
-      - type: create
+      - action: create
         limit: 5r/m
-      - type: read
+      - action: read
         limit: 10r/m
