@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* easier way of setting headers
 * changelog
 
 0.0.3
